<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_parent_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/bga1"
    android:orientation="vertical"
    tools:context="com.example.s162132.parentapp2.ParentMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/childNow"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_weight="0"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/ChildNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/childOff"
                android:textSize="24sp"
                android:textColor="@color/colorCharacter"
                android:layout_weight="0"
                android:layout_gravity="center"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/Gps_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/gpsNow"
                android:textSize="32sp"
                android:width="200sp"
                android:height="80sp"
                android:layout_gravity="center"
                android:layout_below="@+id/ChildNow"
                android:layout_alignLeft="@+id/Cam_button"
                android:layout_alignStart="@+id/Cam_button"
                app:bootstrapBrand="warning"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/Cam_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camNow"
                android:textSize="24sp"
                android:width="200sp"
                android:height="80sp"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/Gps_button"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                app:bootstrapBrand="warning"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:text="@string/lostPrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/colorCharacter" />

                <ToggleButton
                    android:text="ToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/LostPrev"
                    android:layout_weight="0" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:text="子どもに電話をかける"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCall"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:width="200sp"
                android:height="80sp"
                app:bootstrapBrand="warning"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/Setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/setting"
                android:width="200sp"
                android:height="80sp"
                android:layout_gravity="center"
                app:bootstrapBrand="warning"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:text="@string/PhoneNumberSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:width="200sp"
                android:height="80sp"
                android:id="@+id/btnCallSetting"
                android:layout_gravity="center"
                app:bootstrapBrand="warning"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
